refactor(escala/checkout/equipamento): migra módulos para arquitetura hexagonal
- Cria domain.model para Escala, CheckoutEquipamento e Equipamento (Java puro)
- Move entidades JPA para infrastructure.persistence.entity
- Cria EscalaEntity, CheckoutEquipamentoEntity e EquipamentoEntity com mapeamento PostGIS/JPA
- Cria ports de entrada (use cases) e saída (repository ports) para cada módulo
- Implementa application services: CriarEscalaService com lógica de conflito de escala,
  EncerrarEscalaService, DeletarEscalaService, ListarEscalasService, BuscarEscalaPorIdService,
  RegistrarEmprestimoService, RegistrarDevolucaoService, ListarCheckoutsPorEscalaService,
  e serviços CRUD de Equipamento
- Cria persistence adapters: EscalaPersistenceAdapter, CheckoutPersistenceAdapter, EquipamentoPersistenceAdapter
- Move @Scheduled de expiração para EscalaCronJob em infrastructure.scheduling
- Reescreve EscalaController, CheckoutController e EquipamentoController para usar use cases
- Remove EscalaService, CheckoutService e EquipamentoService (fat services)
- Build mvnw compile: OK